test/fail/outrange-nat8.as
let _ = natToNat8 256
